# grackle

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt
doc/source/: Contributing.rst
src/clib/: CMakeLists.txt  Make.config.objects  Makefile  calc_temp1d_cloudy_g.F  calc_temp_cloudy_g.F  calculate_cooling_time.c  calculate_temperature.c  cool1d_multi_g.F  cool_multi_time_g.F  grackle_chemistry_data.h  grackle_fortran_interface.def  initialize_chemistry_data.c  set_default_chemistry_parameters.c  solve_chemistry.c  solve_rate_cool_g.F
src/clib/interop/: calc_temp1d_cloudy_g.c  calc_temp1d_cloudy_g.h  calc_temp1d_cloudy_shim_g.F  cool1d_cloudy_g.c  interop_funcs.def  interop_funcs.h
src/example/: CMakeLists.txt  Makefile  utest_helpers.hpp
src/example/utest_calc_temp1d_cloudy/: calc_temp1d_cloudy_g.F  test_calc_temp1d.C
src/example/utest_cool1d_cloudy/: cool1d_cloudy_g.F  test_cool1d_cloudy.C
src/example/utest_interpolators/: test_interpolators.C
src/python/pygrackle/: fluid_container.py  grackle_defs.pxd  grackle_wrapper.pyx
src/python/tests/: test_code_examples.py  test_forced_primordial_mmw.py
tests/functional/local_solve_chemistry/: CMakeLists.txt
tests/unit/: CMakeLists.txt
