add_executable(c_example c_example.c)
add_executable(c_local_example c_local_example.c)
add_executable(cxx_example cxx_example.C)
add_executable(cxx_grid_example cxx_grid_example.C)
add_executable(cxx_omp_example cxx_omp_example.C)
add_executable(fortran_example fortran_example.F)

target_link_libraries(c_example Grackle::Grackle)
target_link_libraries(c_local_example Grackle::Grackle)
target_link_libraries(cxx_example Grackle::Grackle)
target_link_libraries(cxx_grid_example Grackle::Grackle)
target_link_libraries(cxx_omp_example Grackle::Grackle)
target_link_libraries(fortran_example Grackle::Grackle)
